# knarrow

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  _dev-requirements.txt  _requirements.txt  dev-requirements.in  dev-requirements.txt  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build-and-publish.yml  lint-and-test.yml  python.yml  release.yml
docs/api/: conf.py  index.rst
docs/api/apidoc/: adjacent_distance_method.rst  angle_method.rst  c_method.rst  distance_method.rst  knarrow.cli.rst  knarrow.rst  knee_types.rst  kneedle.rst  menger.rst  modules.rst  ols.rst
src/knarrow/: __about__.py  __init__.py  angle_method.py  angle_method.pyi  c_method.py  c_method.pyi  distance_method.py  distance_method.pyi  kneedle.py  kneedle.pyi  main.py  main.pyi  menger.py  menger.pyi  ols.py  ols.pyi  util.py  util.pyi
src/knarrow/cli/: __init__.py  __main__.py
tests/: conftest.py  test_angle.py  test_cli.py  test_main.py  test_menger.py  test_menger_anchored.py  test_menger_successive.py  test_util.py
tests/cli/: data.txt  shuf_delim.txt  test.txt
