[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "knarrow"
description = 'Shoot a knarrow to the knee'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["optimization", "knee", "elbow", "kneedle"]
authors = [{ name = "Marijan Smetko", email = "msmetko@msmetko.xyz" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
cli = ["typer==0.15.2"]

[project.urls]
Documentation = "https://github.com/InCogNiTo124/knarrow#readme"
Issues = "https://github.com/InCogNiTo124/knarrow/issues"
Source = "https://github.com/InCogNiTo124/knarrow"

[project.scripts]
knarrow = "knarrow.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/knarrow/__about__.py"


[tool.hatch.envs.default]
dependencies = ["ruff", "coverage[toml]", "pytest", "pytest-cov", "typer[all]"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/knarrow --cov=tests {args}"
no-cov = "cov --no-cov {args}"
lint = ["ruff check src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/knarrow"]

[tool.hatch.build.targets.sdist]
include = ["src/knarrow/*"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"] # matches entries in workflow

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/knarrow/__about__.py", "tests/conftest.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
sort = "-miss"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "insegel>=1.3.1",
    "m2r2>=0.3.3.post2",
    "mkdocs-htmlproofer-plugin>=1.3.0",
    "mkdocs-material>=9.6.12",
    "setuptools>=75.3.2",
    "sphinx>=7.1.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-katex>=0.9.10",
]
